# DL

./: .gitattributes  .gitignore  Dockerfile  pyproject.toml  requirments.txt
실습폴더/: day10_dl1_model_full_load.ipynb  day10_dl1_modelsave.ipynb  day10_dl1_modelsave_server.ipynb  day11_dl1_pydantic.ipynb  day12_dl1_conv.ipynb  day6_dl1 copy.ipynb  day6_dl2 copy.ipynb  day6_dl2.ipynb  day6_dl3 copy 2.ipynb  day6_dl3 copy.ipynb  day6_dl3.ipynb  day7_dl1_minist copy.ipynb  day7_dl1_minist.ipynb  day7_dl2_lenet5 copy.ipynb  day7_dl2_lenet5.ipynb  day7_dl3_test.ipynb  day8.ipynb  day8_dl1_vgg16 copy.ipynb  day8_dl1_vgg16.ipynb  day8_dl2_vgg16.ipynb  day9_dl1_transfer copy.ipynb  day9_dl1_transfer.ipynb  day9_dl2_talent copy.ipynb  day9_dl2_talent.ipynb  day9_dl3_test copy 2.ipynb  day9_dl3_test copy 3.ipynb  day9_dl3_test copy.ipynb  fastmain.py  fastmain_copy.py  fastmain_copy_copy.py  infermain.py  infermain_copy.py  simplemodel.py
실습폴더/runs/Aug12_11-17-45_BOOK-POS8RO34E4/: events.out.tfevents.1754965065.BOOK-POS8RO34E4
실습폴더/runs/Aug12_11-21-15_BOOK-POS8RO34E4/: events.out.tfevents.1754965275.BOOK-POS8RO34E4
실습폴더/runs/Aug12_11-39-19_BOOK-POS8RO34E4/: events.out.tfevents.1754966359.BOOK-POS8RO34E4
실습폴더/runs/Aug12_14-12-18_BOOK-POS8RO34E4/: events.out.tfevents.1754975538.BOOK-POS8RO34E4
실습폴더/runs/Aug12_16-26-52_BOOK-POS8RO34E4/: events.out.tfevents.1754983612.BOOK-POS8RO34E4
실습폴더/runs/Aug12_16-34-07_BOOK-POS8RO34E4/: events.out.tfevents.1754984047.BOOK-POS8RO34E4
실습폴더/runs/Aug12_16-37-41_BOOK-POS8RO34E4/: events.out.tfevents.1754984261.BOOK-POS8RO34E4
(+14 files in other folders)
